# aws-rds-test

./: README.md
cdk/: cdk.json  package.json  pnpm-lock.yaml
cdk/lib/: rds-test-stack.ts
test/: .gitignore  Cargo.toml  download-bundle.sh
test/src/: main.rs
